some upgrades and bug fixes

--- a/Lab1-Polymorphic-Container/CMakeLists.txt
+++ b/Lab1-Polymorphic-Container/CMakeLists.txt
@@ -3,4 +3,4 @@ project(laba1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(laba1 main.c utils.c utils.h complexV.c complexV.h vector.c vector.h interface.c interface.h)
+add_executable(laba1 main.c utils.c utils.h complex_unit.c complex_unit.h vector.c vector.h interface.c interface.h)
