--- a/Lab1-Polymorphic-Container/Makefile
+++ b/Lab1-Polymorphic-Container/Makefile
@@ -1,2 +1,2 @@
 all:
-	main.c complex_unit.c interface.c utils.c vector.c -o program
+	gcc main.c complex_unit.c interface.c utils.c vector.c -o program
